force-app/main/default/objects/Exhibition_Regular_Bus_Booking__c/Exhibition_Regular_Bus_Booking__c.object-meta.xml
<CustomObject>
    <label>Exhibition Regular Bus Booking</label>
    <nameField>
        <label>Exhibition Regular Bus Booking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exhibition Regular Bus Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>