force-app/main/default/objects/Exhibition_Regular_Bus_Booking__c/fields/Assistant_Driver_Phone__c.field-meta.xml
<CustomField>
    <fullName>Assistant_Driver_Phone__c</fullName>
    <formula>IF(
ISBLANK(Vehicle_Allocation_Schedule__r.Assigned_Vehicle__r.driver_phone__c),
NULL,
(Vehicle_Allocation_Schedule__r.Assigned_Vehicle__r.driver_phone__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assistant Driver Phone</label>
    <type>Text</type>
</CustomField>