force-app/main/default/objects/Exhibition_Regular_Bus_Booking__c/fields/ExpoInfo_Id__c.field-meta.xml
<CustomField>
    <fullName>ExpoInfo_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ExpoInfo Id</label>
    <referenceTo>ExpoInfo__c</referenceTo>
    <relationshipLabel>Exhibition Regular Bus Bookings</relationshipLabel>
    <relationshipName>Exhibition_Regular_Bus_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>