force-app/main/default/objects/Exhibition_Regular_Bus_Booking__c/fields/Guest_Email__c.field-meta.xml
<CustomField>
    <fullName>Guest_Email__c</fullName>
    <formula>Internal_Registration__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Email</label>
    <type>Text</type>
</CustomField>