force-app/main/default/objects/Exhibition_Regular_Bus_Booking__c/fields/Guest_Phone__c.field-meta.xml
<CustomField>
    <fullName>Guest_Phone__c</fullName>
    <formula>Internal_Registration__r.Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Phone</label>
    <type>Text</type>
</CustomField>