force-app/main/default/objects/Exhibition_Regular_Bus_Booking__c/fields/Guest_Position__c.field-meta.xml
<CustomField>
    <fullName>Guest_Position__c</fullName>
    <formula>Internal_Registration__r.Position__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Position</label>
    <type>Text</type>
</CustomField>