force-app/main/default/objects/Exhibition_Regular_Bus_Booking__c/fields/Is_Arranged__c.field-meta.xml
<CustomField>
    <fullName>Is_Arranged__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>下发通知</inlineHelpText>
    <label>Is Arranged</label>
    <type>Checkbox</type>
</CustomField>