force-app/main/default/objects/Exhibition_Regular_Bus_Booking__c/fields/Pick_Up_Point__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up_Point__c</fullName>
    <label>Pick Up Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>