force-app/main/default/objects/Exhibition_Regular_Bus_Booking__c/fields/Vehicle_Allocation_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Allocation_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>分组</description>
    <label>Vehicle Allocation Schedule</label>
    <referenceTo>Vehicle_Allocation_Schedule__c</referenceTo>
    <relationshipLabel>Exhibition Regular Bus Bookings</relationshipLabel>
    <relationshipName>Exhibition_Regular_Bus_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>