force-app/main/default/objects/Exhibition_Regular_Bus_Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Internal_Registration__c</columns>
    <columns>Date__c</columns>
    <columns>Pick_Up_Point__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>ExpoInfo_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExpoInfo_Id__c</field>
        <operation>contains</operation>
        <value>137</value>
    </filters>
    <label>All</label>
</ListView>