force-app/main/default/objects/Exhibition_Regular_Bus_Booking__c/listViews/X137_Canton_Fair.listView-meta.xml
<ListView>
    <fullName>X137_Canton_Fair</fullName>
    <columns>Internal_Registration__c</columns>
    <columns>Guest_Name_CN__c</columns>
    <columns>Guest_Phone__c</columns>
    <columns>Date__c</columns>
    <columns>Pick_Up_Point__c</columns>
    <columns>Guest_Company__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>If_Cancel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExpoInfo_Id__c</field>
        <operation>contains</operation>
        <value>137</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>4/18/2025</value>
    </filters>
    <filters>
        <field>If_Cancel__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>137 Canton Fair</label>
</ListView>